# alabuga

./: .gitignore  .pre-commit-config.yaml  Caddyfile  Makefile  README.md  TZ_gamification_markdown.md  compose.caddy.yml  docker-compose.yaml  Подробное ТЗ.md
backend/: .env.example  .env.prod.example  Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0cffa152d182_add_artifact_modifiers_and_applied_.py  20240609_0001_init.py  20240611_0002_onboarding.py  20240927_0003_email_confirmation.py  20240927_0004_user_profile_details.py  20240927_0005_submission_documents.py  20240927_0006_user_email_confirmation_columns.py  20240927_0007_python_mission_tables.py  20241005_0007_coding_missions.py  20241010_0008_offline_missions.py  20241012_0009_profile_photos.py  20241014_0010_store_item_images.py  20241015_0008_store_item_images.py  20241020_0009_offline_missions.py  3c5430b2cbd3_merge_python_and_coding_heads.py  e6864d9d2288_some.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: __init__.py  admin.py  auth.py  journal.py  missions.py  onboarding.py  python.py  store.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  init.py  session.py
backend/app/db/seed/: __init__.py  artifacts.py  (+8 more)
backend/app/models/: __init__.py  artifact.py  base.py  branch.py  coding.py  journal.py  mission.py  onboarding.py  python.py  rank.py  store.py  user.py
backend/app/schemas/: admin_stats.py  artifact.py  auth.py  branch.py  coding.py  journal.py  mission.py  onboarding.py  progress.py  python.py  rank.py  store.py  user.py
backend/app/services/: coding.py  email_confirmation.py  journal.py  mission.py  onboarding.py  python_mission.py  rank.py  storage.py  store.py
backend/app/utils/: python_runner.py
backend/tests/: conftest.py  test_coding_mission.py  test_mission_submission.py  test_rank_engine.py
(+50 files in other folders)
