[project]
name = "alabuga-backend"
version = "0.1.0"
description = "Геймифицированный модуль платформы 'Алабуга'"
requires-python = ">=3.13"
dependencies = []

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "T20", "PT", "SIM", "ASYNC"]
ignore = ["B008", "SIM105", "SIM108"]

[tool.ruff.per-file-ignores]
"backend/app/alembic/*" = ["E501"]

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
ignore_missing_imports = true
pretty = true
show_error_codes = true
